@@ -3,3 +3,4 @@ from checkboxwidget import CheckBoxWidget
 from checkboxwidget import DisabledCheckBoxWidget
 from multicheckboxwidget import MultiCheckBoxWidget
 from selectionwidget import LanguageDropdownChoiceWidget
+from sequencewidget import SequenceWidget, TupleSequenceWidget, ListSequenceWidget
